@@ -33,6 +33,8 @@ neu:
     Damit können nun z.B. in den Suchtimer-Mails direkte Links angegeben werden.
   * %date_iso% und %date_iso_now% ergeben das (aktuelle) Datum im Format 'YYYY-MM-DD', 
     vorgeschlagen von Andreas Mair.
+  * %search.series% liefert 1 oder 0 abhängig vom Flag "Serienaufnahme" der Suche und kann
+    im Verzeichniseintrag einer Suche oder in deren abhängigen Variablen benutzt werden.
 - neues Kommando 'connect' innerhalb interner Variablen: damit kann eine Verbindung zu einem
   TCP-Dienst aufgebaut werden, Daten übergeben und das Ergebnis einer Variable zugewiesen
   werden. S. MANUAL für Details.
